# pymdt

./: LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/pymdt/: wd.py
tests/: test_wd.py
