[metadata]
name = pymdt
version = attr: pymdt.__version__
author = attr: pymdt.author
author_email = attr: pymdt.author_email
description = attr: pymdt.description
long_description = file: README.md
long_description_content_type = text/markdown
url = attr: pymdt.url
project_urls =
    Bug Tracker = https://github.com/skybristol/pymdt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src