[metadata]
name = pymdt
description = Python tools for messy data
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1
author = Sky Bristol
license = MIT
platforms = unix, linux, osx, cygwin, win32
license_file = LICENSE
author_email = skybristol@gmail.com
url = https://github.com/skybristol/pymdt
project_urls = 
    Bug Tracker = https://github.com/skybristol/pymdt/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = 
    pymdt
install_requires = 
    requests>=2
    SPARQLWrapper>=1
python_requires = >=3.6
package_dir =
    = src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
pymdt = py.typed

[flake8]
max-line-length = 160